@@ -1,5 +1,10 @@
 2008-10-27  Bastien Nocera  <hadess@hadess.net>
 
+	* gnome_lirc_properties/hardware.py: Fix USB hiddev device (without
+	a product or vendor ID) causing backtraces
+
+2008-10-27  Bastien Nocera  <hadess@hadess.net>
+
 	* gnome_lirc_properties/hardware.py: Fix the backend detecting
 	devices without any keys (power buttons)
 
